ENGINE-2706 return placeholder column when only table is referenced, e.g. in count(*) (#2593)
## Why I'm doing:

 ### Intent

Make EXPLAIN INPUT COLUMNS report tables referenced without explicit
columns, such as SELECT COUNT(*) FROM t0, using the reserved
__STARROCKS_TABLE_REF__ placeholder while preserving the one-column
  result schema.

  ### Commits

  1. refactor: share complete Celostar AST traversal

Adds a shared extension to StarRocks’ incomplete generic traversal,
covering table functions, VALUES, PIVOT, hints, analytic wrappers, and
set-operation ordering. This was extracted because both
VALIDATE and input-reference collection require the same missing
traversal behavior; sharing it prevents duplicated gaps and closes
whitelist bypasses.

  2. refactor: collect scoped explain input references

Introduces an analyzed-AST collector that follows StarRocks resolution
scopes and maps resolved fields to physical tables/views. The existing
collector could report columns but could not retain
tables referenced through COUNT(*), and alias-based matching was
insufficient for correlations, joins, CTEs, and derived relations.

  3. feat: report table-only input references

Emits the placeholder for tables without explicit column references,
keeps existing column output unchanged, preserves the single-column
schema, and rejects real columns named __STARROCKS_TABLE_REF__
to avoid ambiguity. Tests cover the supported query shapes and traversal
regressions.




## What type of PR is this:

- [ ] BugFix
- [ ] Feature
- [x] Enhancement
- [ ] Refactor
- [ ] UT
- [ ] Doc
- [ ] Tool

Does this PR entail a change in behavior?

- [x] Yes, this PR will result in a change in behavior.
- [ ] No, this PR will not result in a change in behavior.

If yes, please specify the type of change:

- [x] Interface/UI changes: syntax, type conversion, expression
evaluation, display information
- [ ] Parameter changes: default values, similar parameters but with
different default values
- [ ] Po